Update corr coef calculation

--- a/TVB_braintumor.ipynb
+++ b/TVB_braintumor.ipynb
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-01-29 23:48:53,492 - WARNING - tvb.simulator.common - psutil module not available: no warnings will be issued when a\n",
+      "2022-01-30 21:37:34,202 - WARNING - tvb.simulator.common - psutil module not available: no warnings will be issued when a\n",
       "    simulation may require more memory than available\n",
       "   INFO  log level set to INFO\n"
      ]
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,18 +1290,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compute_corr(time_line, data_result, sim):\n",
+    "    input_shape = data_result.shape\n",
+    "    result_shape = (input_shape[2], input_shape[2], input_shape[1], input_shape[3])\n",
+    "    sample_period = sim.monitors[1].period\n",
+    "    t_start = time_line[0]\n",
+    "    t_end = time_line[-1]\n",
+    "    t_lo = int((1. / sample_period) * (t_start - sample_period))\n",
+    "    t_hi = int((1. / sample_period) * (t_end - sample_period))\n",
+    "    t_lo = max(t_lo, 0)\n",
+    "    t_hi = max(t_hi, input_shape[0])\n",
+    "    FC = np.zeros(result_shape)\n",
+    "    for mode in range(result_shape[3]):\n",
+    "        for var in range(result_shape[2]):\n",
+    "            current_slice = tuple([slice(t_lo, t_hi + 1), slice(var, var + 1),\n",
+    "                                   slice(input_shape[2]), slice(mode, mode + 1)])\n",
+    "            data = data_result[current_slice].squeeze()\n",
+    "            FC[:, :, var, mode] = np.corrcoef(data.T)\n",
+    "    return FC\n",
+    "            \n",
     "def run_sim(global_coupling):\n",
     "    sim.coupling.a = global_coupling\n",
     "    print(\"Starting simulation.. GC =\" + str(global_coupling))\n",
     "    (tavg_time, tavg_data), (bold_time, bold_data), _ = sim.run()\n",
     "    \n",
     "    # Compute the functional connectivity with the numpy corrcoef analyzer \n",
-    "    print(\"Starting corrcoef\")\n",
-    "    FC = np.corrcoef(bold_data.squeeze().T)\n",
+    "    print(\"Starting corrcoef\")          \n",
+    "    FC = compute_corr(bold_time, bold_data, sim)\n",
+    "    # not certain what to do with all models and SV that TVB computes, so we consider the first ones only\n",
+    "    FC = FC[:,:, 0, 0]\n",
+    "            \n",
     "    # Fisher-Z transform the correlations, important for standardization\n",
     "    # get the upper triangle since it is symmetric along diagonal\n",
     "    sim_fc = arctanh(FC)[uidx]\n",
@@ -1324,10 +1346,9 @@
      "output_type": "stream",
      "text": [
       "Starting simulation.. GC =[0.01]\n",
-      "   INFO  step 1 time 0.0010 s\n",
-      "   INFO  step 100001 time 100.0010 s\n",
-      "   INFO  step 200001 time 200.0010 s\n",
-      "   INFO  step 300001 time 300.0010 s\n"
+      "   INFO  step 500001 time 500.0010 s\n",
+      "   INFO  step 600001 time 600.0010 s\n",
+      "   INFO  step 700001 time 700.0010 s\n"
      ]
     }
    ],
@@ -1365,6 +1386,16 @@
     "pyplot.title('G Vs Correlation')\n",
     "\n",
     "plot(g, PCorr)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Something like this is expected above:\n",
+    "\n",
+    "![](images/graph_correlations.png?raw=true)"
    ]
   },
   {
