ignore nan results

--- a/TVB_braintumor.ipynb
+++ b/TVB_braintumor.ipynb
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
     "    input_shape = data_result.shape\n",
     "    result_shape = (input_shape[2], input_shape[2], input_shape[1], input_shape[3])\n",
     "    sample_period = sim.monitors[1].period\n",
-    "    t_start = time_line[0]\n",
+    "    t_start = sample_period\n",
     "    t_end = time_line[-1]\n",
     "    t_lo = int((1. / sample_period) * (t_start - sample_period))\n",
     "    t_hi = int((1. / sample_period) * (t_end - sample_period))\n",
@@ -1331,7 +1331,11 @@
     "    # Calculate the link-wise Pearson correlation between individual’s \n",
     "    # upper triangular part of the simulated and empirical functional connectivity matrix\n",
     "    print(\"Starting pearsonr\")\n",
-    "    pearson_corr, _ = stat.pearsonr(sim_fc, em_fc)\n",
+    "    try:\n",
+    "        pearson_corr, _ = stat.pearsonr(sim_fc, em_fc)\n",
+    "    except ValueError:\n",
+    "        print(\"Simulation of Corr ended in Nan...\")\n",
+    "        pearson_corr = None\n",
     "\n",
     "    return (global_coupling, pearson_corr)"
    ]
@@ -1346,9 +1350,35 @@
      "output_type": "stream",
      "text": [
       "Starting simulation.. GC =[0.01]\n",
-      "   INFO  step 500001 time 500.0010 s\n",
-      "   INFO  step 600001 time 600.0010 s\n",
-      "   INFO  step 700001 time 700.0010 s\n"
+      "   INFO  step 900001 time 900.0010 s\n",
+      "   INFO  step 1000001 time 1000.0010 s\n",
+      "   INFO  step 1100001 time 1100.0010 s\n",
+      "   INFO  step 1200001 time 1200.0010 s\n",
+      "Starting corrcoef\n",
+      "Starting pearsonr\n",
+      "Starting simulation.. GC =[0.3]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-15-297d8479962e>:33: RuntimeWarning: divide by zero encountered in arctanh\n",
+      "  sim_fc = arctanh(FC)[uidx]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   INFO  step 1300001 time 1300.0010 s\n",
+      "   INFO  step 1400001 time 1400.0010 s\n",
+      "   INFO  step 1500001 time 1500.0010 s\n",
+      "   INFO  step 1600001 time 1600.0010 s\n",
+      "Starting corrcoef\n",
+      "Starting pearsonr\n",
+      "Starting simulation.. GC =[0.59]\n",
+      "   INFO  step 1700001 time 1700.0010 s\n"
      ]
     }
    ],
@@ -1357,7 +1387,7 @@
     "# in the original study a range from 0.01 to 3 with steps of 0.015 was explored\n",
     "# NOTE: Too many steps will take very long time when running the script on a local computer\n",
     "# adjust the range of G, or the step size to reduce simulation time\n",
-    "gc_range = np.arange(0.01, 3, 0.29) #0.29\n",
+    "gc_range = np.arange(0.01, 3, 0.29) \n",
     "results = []\n",
     "for gc in gc_range:\n",
     "    results.append((gc, run_sim(np.array([gc]))))\n",
